# fin-breaker

./: .gitignore  Dockerfile  LICENSE.md  README.md  main.py  pyproject.toml
agents/: analysis_agent.py  api_agent.py  language_agent.py  retriever_agent.py  voice_agent.py
app/backend/agent/: agent.py  tools.py
app/backend/api/: schema.py
app/backend/api/endpoints/: market_api.py  orchestrator_api.py
app/backend/data_ingestion/: filings_loader.py
app/backend/services/: market_data.py  retrieval.py  scraping_agent.py  synthesis.py  voice.py
app/backend/utils/: config.py
data_ingestion/: market_data_loader.py
docs/: ai_tool_usage.md
orchestrator/: orchestrator.py
streamlit_app/: app.py
tests/: test_agents.py
utils/: config.py  logging_config.py
