[tool.poetry]
name = "fin-breaker"
version = "0.1.0"
description = "Morning news breaker for finance!"
authors = ["Abhay Shukla <abhayshuklaistheone@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
streamlit = "^1.45.1"
yfinance = "^0.2.61"
beautifulsoup4 = "^4.13.4"
sentence-transformers = "^4.1.0"
faiss-cpu = "^1.11.0"
pyttsx3 = "^2.98"
google-genai = "^1.16.1"
python-multipart = "^0.0.20"
crewai = "^0.121.1"
langchain = "^0.3.25"
langchain-community = "^0.3.24"
langgraph = "^0.4.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
